force-app/main/default/objects/Advancement__c/Advancement__c.object-meta.xml
<CustomObject>
    <description>ECM v1 Job Placement Service Domain</description>
    <label>Advancement</label>
    <nameField>
        <displayFormat>Advancement-{0000}</displayFormat>
        <label>Advancement #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Advancements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>