force-app/main/default/objects/Advancement__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <defaultValue>today()</defaultValue>
    <description>ECM v1 Job Placement Service Domain</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>