force-app/main/default/objects/Advancement__c/fields/Job_Placement__c.field-meta.xml
<CustomField>
    <fullName>Job_Placement__c</fullName>
    <description>ECM v1 Job Placement Service Domain</description>
    <label>Job Placement</label>
    <referenceTo>Placement__c</referenceTo>
    <relationshipLabel>Advancements</relationshipLabel>
    <relationshipName>Advancements</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>