force-app/main/default/objects/Advancement__c/fields/Legacy_Activity_ID_from_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Activity_ID_from_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From Activity table in legacy Access database</inlineHelpText>
    <label>Legacy Activity ID (from Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>