force-app/main/default/objects/Advancement__c/fields/Legacy_Salary_History_ID_from_Access__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Salary_History_ID_from_Access__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>From Salary History table in legacy Access database</inlineHelpText>
    <label>Legacy Salary History ID (from Access)</label>
    <length>10</length>
    <type>Text</type>
</CustomField>