force-app/main/default/objects/Advancement__c/fields/Salary_Type__c.field-meta.xml
<CustomField>
    <fullName>Salary_Type__c</fullName>
    <label>Salary Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Weekly</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Yearly</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>