force-app/main/default/objects/Advancement__c/fields/Sequence__c.field-meta.xml
<CustomField>
    <fullName>Sequence__c</fullName>
    <description>ECM v1 Job Placement Service Domain</description>
    <label>Sequence</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Baseline</fullName>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Latest</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>