force-app/main/default/objects/Advancement__c/fields/Wage__c.field-meta.xml
<CustomField>
    <fullName>Wage__c</fullName>
    <description>ECM v1 Job Placement Service Domain</description>
    <label>Wage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>