force-app/main/default/objects/Advancement__c/fields/Wage_Unit__c.field-meta.xml
<CustomField>
    <fullName>Wage_Unit__c</fullName>
    <description>ECM v1 Job Placement Service Domain</description>
    <label>Wage Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Piece</fullName>
            </value>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>